pho/src/components/SpaceSpeaker/SpaceSpeakerActions.css
.space-speaker-actions-container {
  flex-grow: 1;
  display: flex;
  justify-content: center;
  align-items: center;
  padding-right: 20px;
  padding-left: 20px;
}

.space-speaker-actions-btn-container {
  display: flex;
  flex-direction: row;
  gap: 12px;
}

.space-speaker-actions-btn {
  flex-grow: 1;
  height: 43px;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  border-radius: 10px;
  background: #b1b2ff;
  /* Display Flex */
  display: flex;
  align-items: center;
  justify-content: center;

  /* Font props */
  font-weight: 700;
  font-size: 24px;
  line-height: 25px;
  color: #ffffff;
  margin-bottom: 14px;
  padding: 20px;
}

.space-speaker-actions-btn:hover {
  background: rgb(139, 140, 211);
  cursor: pointer;
}

.space-speaker-actions-btn-close {
  font-size: 14px !important;
  transition: all 400ms ease-in-out;
}

